--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=D:\\android_sdk\\android_sdk
-flutter.sdk=G:\\flutter
+sdk.dir=D:\\Flutter\\sdk
+flutter.sdk=D:\\Flutter\\flutter
+flutter.buildMode=release
+flutter.versionName=1.0.0
+flutter.versionCode=1
