--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <application
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:label="clothes_store"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
