--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   location: ^8.0.1
   easy_localization: ^3.0.3
   flutter_paypal_payment: ^1.0.8
+  flutter_colorpicker: ^1.0.3
 
 
 
